pushing changes to figure out spacing issues

--- a/assets/css/_calc_form.scss
+++ b/assets/css/_calc_form.scss
@@ -45,7 +45,7 @@
 
         display: flex;
         flex-wrap: wrap;
-        overflow: auto;
+        overflow: scroll;
         justify-content: space-evenly;
         align-items: flex-start;
 
